Added 3X3 layout support

--- a/src/templates/widget.html
+++ b/src/templates/widget.html
@@ -3,6 +3,11 @@
     <div ng-include src="definition.titleTemplateUrl"></div>
   </div>
   <div ng-class="{'panel-body':!widget.frameless || editMode}" uib-collapse="widgetState.isCollapsed">
-    <adf-widget-content model="definition" content="widget" />
+    <!--adf-widget-content model="definition" content="widget" /-->
+
+    <!-- Place for adding logic for highchart or table directives-->
+    <h1>Test</h1>
   </div>
 </div>
+
+
